# sphinx_slide

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  qr_server.py  requirements.txt  resize_icons.py  serve.sh  test_dl_dt.css
.github/workflows/: deploy.yml
.skills/ai-smell-detector/: SKILL.md
.skills/lt-finale-optimizer/: SKILL.md
.skills/qiita-article-creator/: SKILL.md
pdftoimg/: .gitginore  .gitignore  scr.py  scr_img.py
source/: conf.py  enujii.rst  fg2045.rst  godao.rdt  godao.rst  index.rst  sample.rst  whois.rst
source/_image/: .gitignore
source/_static/: custom.css  fg.css  manifest.json  onetime.css  robots.txt  sitemap.xml  slides.css
source/_templates/: layout.html
source/slides/260223_ailt/: conf.py  index.rst  whois.rst
source/slides/260319_geeks_who_drink_in_nagasaki/: conf.py  index.rst  whois.rst
source/slides/260515_naite_lt/: conf.py  index.rst  purpose.rst  whois.rst
source/slides/260519_engineer_plus_3/: conf.py  index.rst  whois.rst
source/slides/none/: conf.py  index.rst
source/slides/presentation1/: index.rst  whois.rst
source/slides/presentation2/: conf.py  index.rst
source/slides/shared/_static/: footnotes.css  layout.css  portfolio.css
