[project]
name = "sphinx-slide"
version = "0.1.0"
description = "slide"
readme = "README.md"
authors = [{ name = "Sion908", email = "sionn908@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "sphinx>=8.0.2",
    "sphinx-revealjs>=3.0.3",
    "sphinx-design>=0.6.1",
    "sphinxemoji>=0.3.1",
    "sphinxext-opengraph>=0.9.1",
    "oembedpy>=0.7.2",
    "playwright>=1.49.0",
    "pillow>=11.0.0",
    "qrcode",
    "atsphinx-qrcode>=0.2.0",
]

[tool.uv]
package = false
